2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/readmidi.c: XG reverb fix
	* timidity/sysdep.h: digital mars fix

2006-01-21  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/portaudio_a.c: bug fix
	* interface/w32g_syn.c: digital mars compile fix
	* timidity/effect.c.orig:  Noise shaping noise fix.

2006-01-19  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Can compile with Digital Mars.
	* configure.in
	* interface/Makefile.am libarc/Makefile.am libunimod/Makefile.am 
	* timidity/Makefile.am utils/Makefile.am
	* timidity/common.c.orig timidity/list_a.c.orig timidity/timidity.c 
	* utils/support.c: Changes for Digital Mars.
	* timidity/effect.c.orig:  Noise shaping noise hack.
	* script/unix2dos.sh: Added. newline code conversion(LF->CRLF).

2006-01-17  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* interface/w32g.h: fix LCD array size mismatch hang up.
	* interface/w32g_pref.c
	* interface/w32g_utl.c: fix over 256 voces hang up about win GUI.
	* timidity/reverb.h: small fix.

2006-01-16  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
	Supress linker errors about Windows GUI executables.

	* configure.in: shape up.
	* interface/Makefile.am: don't link tty and dumb objs to GUI executables.
	* interface/w32g_i.c: borand C volatile link problem fix.
	* interface/w32g_ut2.c.orig: small fix.
	* timidity/controls.c
	* timidity/timidity.c
	* timidity/wrdt: GUI executables don't use dumb or tty controls.
	* timidity/reverb.c
	* timidity/reverb.c: don't define public variables in .h file.

2006-01-15  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* configure.in: MSVC compile fix
	* windrv/timiditydrv.cpp: use _beginthreadex not CreateThread
	* doc/ja_JP.eucJP/README.w32: typo
	* script/Makefile.am: add script/wpp386_w.sh
	* interface/ncurs_c.c: 

2006-01-12  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* doc/C/README.w32
	* doc/ja_JP.eucJP/README.w32: add wine wrc.exe discription